Dojo Survey with Validation
added validation to basic Dojo Survey

--- a/dojosurvey/templates/index.html
+++ b/dojosurvey/templates/index.html
@@ -26,10 +26,17 @@
             <option value="Flask">Flask</option>
             <option value="MEAN">MEAN</option>
         </select><br>
-        Comments (optional):<br><textarea name="comment" rows="5" cols="35"></textarea><br>
+        Comments (120 Char Max):<br><textarea name="comment" rows="5" cols="35"></textarea><br>
         
         <input type='submit' value='Submit'>
         </form>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{message}}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     </div>
 
 </body>
